--- a/src/index.html
+++ b/src/index.html
@@ -10,4 +10,5 @@
     <p>Et maiores nostrum tenetur excepturi iste id, harum eos quis aliquam aspernatur beatae illum recusandae voluptas dolorum quod quidem sequi repellendus quia modi asperiores! Architecto nisi praesentium quidem quam vel!</p>    
 </body>
 <button>Deneme buton</button>
+<button>2.Button</button>
 </html>
