--- a/src/index2.html
+++ b/src/index2.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde nostrum quae corrupti, veritatis hic ipsum odit eos atque. Impedit nisi distinctio porro unde sit sapiente quos suscipit quis, repellat labore?</p>
-</body>
+    <p>Karşı tararaf...</p>
+
+    </body>
 
 </html>
