--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde nostrum quae corrupti, veritatis hic ipsum odit eos atque. Impedit nisi distinctio porro unde sit sapiente quos suscipit quis, repellat labore?</p>
-    <p>Et maiores nostrum tenetur excepturi iste id, harum eos quis aliquam aspernatur beatae illum recusandae voluptas dolorum quod quidem sequi repellendus quia modi asperiores! Architecto nisi praesentium quidem quam vel!</p>    
-    <p>Et maiores nostrum tenetur excepturi iste id, harum eos quis aliquam aspernatur beatae illum recusandae voluptas dolorum quod quidem sequi repellendus quia modi asperiores! Architecto nisi praesentium quidem quam vel!</p>    
-    <p>Et maiores nostrum tenetur excepturi iste id, harum eos quis aliquam aspernatur beatae illum recusandae voluptas dolorum quod quidem sequi repellendus quia modi asperiores! Architecto nisi praesentium quidem quam vel!</p>    
-    <p>Et maiores nostrum tenetur excepturi iste id, harum eos quis aliquam aspernatur beatae illum recusandae voluptas dolorum quod quidem sequi repellendus quia modi asperiores! Architecto nisi praesentium quidem quam vel!</p>    
-    <p>Et maiores nostrum tenetur excepturi iste id, harum eos quis aliquam aspernatur beatae illum recusandae voluptas dolorum quod quidem sequi repellendus quia modi asperiores! Architecto nisi praesentium quidem quam vel!</p>    
-        aaa
-        bbb 
-</body>
-<button>Deneme buton</button>
-<button>2.Button</button>
-<button>Denemeler..</button>
+<!DOCTYPE HTML>
+<html   lang="en">
+    <head>
+        <title>Alıştırma sayfası</title>
+        <meta charset = "UTF-8"/>
+    </head>
+    <body>
+        <h1>1.seviye başlık etiketi</h1>
+        <h2>2.seviye başlık etiketi</h1>
+        <h3>3.seviye başlık etiketi</h1>
+        <h4>4.seviye başlık etiketi</h1>
+        <h5>5.seviye başlık etiketi</h1>
+        <h6>6.seviye başlık etiketi</h1>
+        <p>
+            Paragrafın yazılacağı yerler. &nbsp;&nbsp;&nbsp;&nbsp; Boşluk denemesi 
+        </p>
+       
+        <img src="
+        https://banner2.cleanpng.com/20180425/rse/kisspng-html-computer-icons-5ae0b5fc133303.8575417015246760920787.jpg" 
+        height="200" width="300"/>
+    </body>
+    <form action="https://github.com/SuleymanDemirel">
+        <button type="submit">Deneme Button</button>
+    
 </html>
