Ufak eklemeler yapıldı

--- a/src/Tablo.html
+++ b/src/Tablo.html
@@ -29,7 +29,9 @@
                 <tr><td colspan="4" >YBS</td></tr>
             </tfoot>   
         
-        </table>    
+        </table>  
+        
+        <a href="https://github.com/SuleymanDemirel" target="_blank"> Süleyman Demirel Github</a>
     </body> 
   
 </html>
