--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         </ol> 
         
     </body> 
-    <form action="https://github.com/SuleymanDemirel">
+    <form action="https://github.com/SuleymanDemirel" target="_blank">
         <button type="submit">Deneme Button</button>
 
         <img src="
